# JutulGPT

./: .env.example  .gitignore  LICENCE  Manifest.toml  Project.toml  README.md  TODO.md  env.example  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
.vscode.example/: mcp.json
examples/: autonomous_agent.py  basic_example.py  chatbot.py  check_loading.py  cli.py  cli_agent.py  cli_multi_agent.py  get_function_documentation_from_code.py  graph_example.py  julia_error_example.py  julia_example.py  julia_questions.txt  jutuldarcy_questions.txt  question.py  questions.txt  rag.py  rag_example.py  retrieve_function_signatures.py  split_julia.py
examples/tools/: run_tool.py
examples/usage_of_spesific_functions/: get_function_documentation.py  get_lint_result_from_code.py  run_tool.py  run_tools.py
presentation/: README.md  content.tex  main.tex  packages.tex
scripts/: README.md  manage_cache.py
src/: __init__.py  agent.py  config.py  edges.py  graph.py  llm.py  main.py  prompts.py  schema.py  utils.py
src/jutulgpt/: __init__.py  agent.py  agents.py  cli.py  cli_utils.py  config.py  configuration.py  edges.py  graph.py  julia_interface.py  llm.py  nodes.py  prompts.py  rag.py  state.py  tools.py  utils.py
src/jutulgpt/agents/: __init__.py  agent.py  agent_base.py  autonomous_agent.py
src/jutulgpt/cli/: __init__.py  cli_colorscheme.py  cli_human_interaction.py  cli_utils.py
src/jutulgpt/human_in_the_loop/: __init__.py  check_shortened_code.py  cli.py  modify_rag_query.py  response_on_check_code.py  response_on_error.py  response_on_generated_code.py  response_on_rag.py
src/jutulgpt/iterative_agent_system/: iterative_agent_base.py
src/jutulgpt/julia/: __init__.py  extract_docs.py  extract_jutuldarcy_docs.jl  get_function_documentation.py  get_function_documentation_from_code.py  get_linting_result.py  julia_code_runner.py  julia_get_function_documentation.jl  julia_lint_script.jl
src/jutulgpt/multi_agent_system/: __init__.py  multi_agent.py
src/jutulgpt/nodes/: __init__.py  _tools.py  check_code.py  generate.py  generate_response.py  get_user_input.py  reflect.py  retrieve.py
src/jutulgpt/prompts/: default.txt
src/jutulgpt/rag/: __init__.py  check_function_arguments.py  extract_function_names_from_docs.py  extracted_julia_names.txt  github_fetcher.py  retrieval.py  retriever_specs.py  retrievers.py  scrape_docs_from_julia_code.py  split_docs.py  split_examples.py  split_fimbul.py  split_function_signatures.py  split_jutuldarcy.py
src/jutulgpt/tools/: __init__.py  (+13 more)
src/nodes/: check_code.py  generate.py  reflect.py
src/ui/: index.tsx  package.json
tests/: test_julia_interface.py
tests/unit_tests/: test_agent.py  test_check_code.py  test_generate_response.py  test_graph.py  test_julia_interface.py  test_nodes.py  test_rag.py  test_state.py  test_utils.py
(+45 files in other folders)
