[project]
name = "jutulgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "ipython>=9.4.0",
    "jutuldarcy>=1.1.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langchainhub>=0.1.21",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "pydantic>=2.11.7",
    "unstructured[md]>=0.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
